test/parse/fail/parenDedent.em
# Expect failure

One two
	three four (
		five
	six